--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-minimal
 logo: assets/logo.png
 title: Séries Temporais
-show_downloads: false
+show_downloads: true
+link_material: 'https://github.com/curso-r/main-series/raw/master/material_do_curso.zip'
